Restructure project directories

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
                 "${workspaceFolder}/vendor/glad/glad.c",
                 "-lglfw3dll",
                 "-o",
-                "${workspaceFolder}/VoxelCraft.exe"
+                "${workspaceFolder}/build/VoxelCraft.exe"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
